appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
    clearKeychain: true
- extendedWaitUntil:
    visible:
      id: onboarding-screen
    timeout: 60000
- tapOn:
    id: onboarding-demo-button
- assertVisible:
    id: home-screen
- tapOn:
    id: activity-tab
- assertVisible:
    id: activity-screen
- tapOn:
    id: activity-add-transaction-button
- assertVisible:
    id: add-transaction-screen
- assertVisible:
    id: add-transaction-type-expense-selected
- tapOn:
    id: add-transaction-amount-input
- eraseText
- inputText: "12.34"
- tapOn:
    id: add-transaction-payee-input
- inputText: Maestro Coffee
- tapOn:
    point: 50%,20%
- tapOn:
    id: add-transaction-submit-button
- extendedWaitUntil:
    notVisible:
      id: add-transaction-screen
    timeout: 12000
- assertVisible:
    id: activity-screen
- tapOn:
    id: activity-search-input
- inputText: Maestro Coffee
- assertVisible: Maestro Coffee
